--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "svgo": "^1.1.1",
+    "svgr": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "svg-icons": "svgo --config .svg/svgo-icons.config.json -f .svg/icons&& svgr --ext jsx --icon --no-svgo --tab-width 4 -d client/components/svg/icons .svg/icons&& create-index ./imports/ui/components/svg/icons --extensions js jsx",
+    "svg-imgs": "svgo --config .svg/svgo-imgs.config.json -f .svg/imgs&& svgr --ext jsx --no-svgo --keep-useless-defs --tab-width 4 -d client/components/svg/imgs .svg/imgs",
+    "svg-imgs-unstyled": "svgo --config .svg/svgo-icons.config.json -f .svg/imgs-unstyled&& svgr --ext jsx --no-svgo --tab-width 4 -d client/components/svg/imgs .svg/imgs-unstyled"
   },
   "eslintConfig": {
     "extends": "react-app"
