--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "create-index": "^2.4.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -19,9 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "svg-icons": "svgo --config .svg/svgo-icons.config.json -f .svg/icons&& svgr --ext jsx --icon --no-svgo --tab-width 4 -d client/components/svg/icons .svg/icons&& create-index ./imports/ui/components/svg/icons --extensions js jsx",
-    "svg-imgs": "svgo --config .svg/svgo-imgs.config.json -f .svg/imgs&& svgr --ext jsx --no-svgo --keep-useless-defs --tab-width 4 -d client/components/svg/imgs .svg/imgs",
-    "svg-imgs-unstyled": "svgo --config .svg/svgo-icons.config.json -f .svg/imgs-unstyled&& svgr --ext jsx --no-svgo --tab-width 4 -d client/components/svg/imgs .svg/imgs-unstyled"
+    "svg-icons": "svgo --config .svg/svgo-icons.config.json -f .svg/icons&& svgr --ext jsx --icon --no-svgo --tab-width 4 -d src/components/svg/icons .svg/icons&& create-index ./imports/ui/components/svg/icons --extensions js jsx",
+    "svg-imgs": "svgo --config .svg/svgo-imgs.config.json -f .svg/imgs&& svgr --ext jsx --no-svgo --keep-useless-defs --tab-width 4 -d src/components/svg/imgs .svg/imgs",
+    "svg-imgs-unstyled": "svgo --config .svg/svgo-icons.config.json -f .svg/imgs-unstyled&& svgr --ext jsx --no-svgo --tab-width 4 -d src/components/svg/imgs .svg/imgs-unstyled"
   },
   "eslintConfig": {
     "extends": "react-app"
